# HoloAssist

./: .gitattributes  .gitignore  CLAUDE.md  Claude.md  GPT recommendations.md  HoloAssist.sln  INTEGRATION_CHANGES.md  INTEGRATION_NOTES.md  JOHN.md  QUICKSTART.md  README.md  SETUP.md  UnityChanges.md  auto_sort.py  beacon.py  claude.md  cube_pose_relay.py  dashboard.sh  gripper_node.py  holoassist.rviz  i am guy shots.txt  launch.py  launch.sh  may6.md  subsystem3_renegotiation.md
Old Documents/: HoloAssist_Project_Contract(1).docx  PROJECT_PLAN.md  subsystem2_renegotiation_options.md
Unity/My project/: My project.slnx  xrtest.apk
aprilcubes/rg2_cube_1/: 1cube.3mf  README.md  config.json  cube.3mf
aprilcubes/rg2_cube_2/: 2cube.3mf  README.md  config.json
aprilcubes/rg2_cube_3/: 3cube.3mf  README.md  config.json
aprilcubes/rg2_cube_4/: 4cube.3mf  README.md  config.json
dashboard/: main.py  ros_interface.py
docker/rs2-ur/: .env  Dockerfile  compose.yml  entrypoint.sh
evaluation/: subsystem1_john_perception.md  subsystem2_oliver_autonomous.md  subsystem3_nic_teleoperation.md  subsystem4_seb_visualisation.md
guyshots/: airport_downsample_k100_cluster_labels.npy  imgui.ini  quiz_1_Revise.py
holoassist-dashboard/: README.md  filetree.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
holoassist-dashboard/src/: App.tsx  index.css
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
ros2_ws/: .gitignore  CLAUDE.md  FOXGLOVE_DISCOVERY_REPORT.md  FOXGLOVE_RUNTIME.md  HOLOASSIST_RUNTIME_UNIFICATION_RUNBOOK.md  PERCEPTION_PHASE4_VALIDATION.md  PERCEPTION_ROSBAG_WORKFLOW.md  README.md  README_MOVEMENT.md  RS2_HOLOASSIST_SIM_BRINGUP.md  WHICH_WS.txt  demo_ur.py  moveit_robot_control.py  moveit_robot_pose_control.py  robot-control.py  robot-demo-control.py
ros2_ws/src/holo_assist_depth_tracker/: README.md  claude.md  package.xml  setup.cfg  setup.py
ros2_ws/src/holo_assist_depth_tracker/config/: apriltag_all.yaml  apriltag_board.yaml  apriltag_cubes.yaml  board_calibration_params.yaml  cubes.yaml  depth_tracker_visualization.rviz  sim_apriltag_params.yaml  tracker_params.yaml  workspace.yaml  workspace_perception_params.yaml
ros2_ws/src/holo_assist_depth_tracker/docs/: PERCEPTION_PIPELINE_REFERENCE.md
ros2_ws/src/holo_assist_depth_tracker/holo_assist_depth_tracker/: __init__.py  dashboard_relay_node.py  depth_tracker_node.py  webcam_image_publisher_node.py  workspace_perception_node.py
ros2_ws/src/holo_assist_depth_tracker/holo_assist_depth_tracker/nodes/: __init__.py  board_calibration_node.py  cube_pose_node.py  detection_merge_node.py  overlay_node.py  sim_apriltag_publisher_node.py  workspace_board_node.py
ros2_ws/src/holo_assist_depth_tracker/holo_assist_depth_tracker/utils/: __init__.py  apriltag.py  math3d.py
ros2_ws/src/holo_assist_depth_tracker/launch/: board_calibration.launch.py  camera_only.launch.py  dashboard_bridge.launch.py  foxglove_relay.launch.py  holo_assist_depth_tracker.launch.py  holoassist_4tag_board_4cube.launch.py  holoassist_full_xr.launch.py  sim_holoassist_trolley.launch.py  view_holoassist_scene.launch.py  visualize_depth_tracker.launch.py  webcam_rgb_monitor.launch.py  workspace_perception.launch.py
ros2_ws/src/holo_assist_depth_tracker/resource/: holo_assist_depth_tracker
ros2_ws/src/holo_assist_depth_tracker/test/: test_perception_algorithms.py
ros2_ws/src/holo_assist_depth_tracker/worlds/: UR3eTrolley(1).dae  holoassist_scene.urdf  holoassist_trolley_board.world  simulation_notes.md
ros2_ws/src/holo_assist_depth_tracker/worlds/launch/: view_holoassist_scene.launch.py
ros2_ws/src/holo_assist_depth_tracker/worlds/meshes/apriltags/: tag_0.dae  tag_1.dae  tag_2.dae  tag_3.dae
ros2_ws/src/holo_assist_depth_tracker/worlds/rviz/: holoassist_scene.rviz
ros2_ws/src/holo_assist_depth_tracker/worlds/urdf/: holoassist_scene.urdf.xacro
ros2_ws/src/holo_assist_depth_tracker_sim/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/holo_assist_depth_tracker_sim/config/: sim_camera.yaml  sim_cubes.yaml  sim_scene.yaml
ros2_ws/src/holo_assist_depth_tracker_sim/holo_assist_depth_tracker_sim/: __init__.py  common.py  pick_place_service_node.py  selected_cube_to_moveit_target_node.py  sim_cube_moveit_bridge_node.py  sim_cube_perception_node.py  sim_cube_truth_node.py
ros2_ws/src/holo_assist_depth_tracker_sim/launch/: sim_april_cube_moveit.launch.py  sim_april_cube_perception.launch.py  sim_april_cube_truth.launch.py  view_holoassist_scene.launch.py
ros2_ws/src/holo_assist_depth_tracker_sim/rviz/: holoassist_moveit_full.rviz  holoassist_sim.rviz
ros2_ws/src/holo_assist_depth_tracker_sim/worlds/: holoassist_gazebo_sim.world
ros2_ws/src/holo_assist_depth_tracker_sim_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/holo_assist_depth_tracker_sim_interfaces/msg/: CubePerceptionStatus.msg
ros2_ws/src/holo_assist_depth_tracker_sim_interfaces/srv/: PickCubeToBin.srv  SetAprilCubePose.srv  SetCameraPose.srv
ros2_ws/src/holoassist_foxglove/: README.md  claude.md  package.xml  setup.cfg  setup.py
ros2_ws/src/holoassist_foxglove/config/: apriltag_cube_36h11_45mm.yaml  apriltag_cube_pose_debug.rviz  apriltag_workbench_16h5.yaml  apriltag_workbench_36h11.yaml  foxglove_layout_spec.yaml
ros2_ws/src/holoassist_foxglove/holoassist_foxglove/: apriltag_cube_pose_node.py  apriltag_image_overlay_node.py  obstacle_to_object_pose_adapter.py  runtime_observability_node.py
ros2_ws/src/holoassist_foxglove/launch/: apriltag_cube_pose_debug.launch.py  apriltag_workbench.launch.py  holoassist_foxglove_runtime.launch.py  holoassist_stack.launch.py  observability.launch.py
ros2_ws/src/holoassist_foxglove/resource/: holoassist_foxglove
ros2_ws/src/holoassist_manager/: CMakeLists.txt  README.md  claude.md  package.xml
ros2_ws/src/holoassist_manager/config/: manager_params.yaml
ros2_ws/src/holoassist_manager/include/holoassist_manager/: manager_node.hpp
ros2_ws/src/holoassist_manager/src/: manager_node.cpp  tf_marker_bridge.cpp
scripts/: run_ur3e.sh
(+1354 files in other folders)
