<?xml version="1.0"?>
<package format="3">
  <name>holo_assist_depth_tracker_sim</name>
  <version>0.1.0</version>
  <description>Simulation-only nodes and launch files for HoloAssist backend bring-up without XR hardware.</description>

  <maintainer email="john@example.com">john</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>holo_assist_depth_tracker_sim_interfaces</depend>
  <depend>holo_assist_depth_tracker</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
